# fabric-plus

./: .coveragerc  .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml  python-app.yml  testing.yml
docs/: .buildinfo  CNAME  contact.html  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  parallelism.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: contact.doctree  contributing.doctree  environment.pickle  getting-started.doctree  index.doctree  parallelism.doctree
docs/.doctrees/api/: client.doctree  connection.doctree  transfer.doctree
docs/_sources/: contact.rst.txt  contributing.rst.txt  getting-started.rst.txt  index.rst.txt  parallelism.rst.txt
docs/_sources/api/: client.rst.txt  transfer.rst.txt
docs/api/: client.html  connection.html  transfer.html
docs_source/source/: conf.py  contact.rst  getting-started.rst  index.rst  parallelism.rst
docs_source/source/api/: client.rst  connection.rst
fabric-scp/: fabric_scp.py
fabricplus/: connection.py  transfer.py
fabricplus/paramiko_modifications/: client.py
fabricscp/: connection.py  transfer.py
tests/: test_connection.py  test_transfer.py
