[tool.poetry]
name = "fabric-scp"
version = "0.1.0"
description = "A Python 3.8.10+ wrapper to add in SCP functionality for file transfer in Fabric."
authors = ["Courtney Caldwell <courtneyccaldwell@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10"
scp = "^0.14.5"
fabric = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
poetry = "^1.8.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
