[tool.poetry]
name = "fabricplus"
version = "1.0.1"
description = "A Python 3.8.10+ wrapper to add in SCP functionality for file transfer in Fabric."
authors = ["Courtney Caldwell <courtneyccaldwell@gmail.com>"]
maintainers = ["Courtney Caldwell <courtneyccaldwell@gmail.com>"]
repository = "https://github.com/prokopto-dev/fabric-plus"
homepage = "https://fabricplus.prokopto.dev/"
keywords = ["fabric", "scp", "file transfer", "python", "wrapper", "paramiko", "connection", "transfer"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
scp = "^0.14.5"
fabric = "^3.2.2"
paramiko = "^3.4.0"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
poetry = "^1.8.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
flake8 = "^7.0.0"
black = "^24.4.2"

[tool.pytest.ini_options]
addopts = "-v --cov=fabricplus --cov-report=term-missing --cov-report=xml --cov-config=.coveragerc"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
